Simple injection demonstrated

--- a/Module 01/fun-with-di/src/app/components/clac/clac.component.css
+++ b/Module 01/fun-with-di/src/app/components/clac/clac.component.css
@@ -1,9 +1,18 @@
 :host {
     display: flex;
     flex-direction: row;
+    margin: 4px;
 }
 
 
 input {
     max-width: 60px;
+}
+
+.service {
+    font-size: 0.6em;
+    max-width: 100px;
+    color: blue;
+    align-self: center;
+    font-family: consolas;
 }
