--- a/Module 01/fun-with-di/src/app/components/clac/clac.component.html
+++ b/Module 01/fun-with-di/src/app/components/clac/clac.component.html
@@ -1,3 +1,4 @@
+<span class="service">Addition Service id: {{additionService.id}}</span>
 <input type="number" #numA>
 +
 <input type="number" #numB>
