useFactory, useValue, demonstrated We also used factory dependencies

--- a/Module 01/fun-with-di/src/app/app.component.html
+++ b/Module 01/fun-with-di/src/app/app.component.html
@@ -3,3 +3,7 @@
 <app-group></app-group>
 <hr>
 <app-clac></app-clac>
+<hr>
+
+<button (click)="toggleComplex()">Toggle Complex</button>
+<app-complex-viewer *ngIf="isShowingComplex"></app-complex-viewer>
