http interceptors demo

--- a/Module 01/fun-with-di/src/app/components/complex-viewer/complex-viewer.component.html
+++ b/Module 01/fun-with-di/src/app/components/complex-viewer/complex-viewer.component.html
@@ -1,4 +1,6 @@
 <h1 (mousemove)="whenTheMouseMoves()">Complex = {{complex}}</h1>
 <!-- You should NEVER do this - NEVER call functions in the template!!! -->
 
+<button (click)="bringMeSomeData()">Get Data</button>
+
 <h2 *ngFor="let color of favoriteColors" [style.color]="color">Favorites color is {{color}}</h2>
