a very bad example of how to code reactively

--- a/Module 02/fun-with-rxjs/src/app/app.component.html
+++ b/Module 02/fun-with-rxjs/src/app/app.component.html
@@ -1,1 +1,6 @@
 <button (click)="go()">GO!</button>
+<button (click)="toggle()">Toggle Reader</button>
+<hr>
+
+<app-counter-editor></app-counter-editor>
+<app-counter-reader *ngIf="isShowingReader"></app-counter-reader>
