--- a/Module 03/ngrx-exam/src/app/components/current-question-presenter/current-question-presenter.component.html
+++ b/Module 03/ngrx-exam/src/app/components/current-question-presenter/current-question-presenter.component.html
@@ -1,7 +1,8 @@
 <ng-container *ngIf="question$ | async as question">
     <h1>{{question.caption}}</h1>
-    <div *ngFor="let answer of question.answers">
-        {{answer}}
+    <div class="all-answers">
+        <div class="answer" *ngFor="let answer of question.answers">
+            {{answer}}
+        </div>    
     </div>
-
 </ng-container>
