--- a/Module 03/ngrx-exam/src/app/components/current-question-presenter/current-question-presenter.component.html
+++ b/Module 03/ngrx-exam/src/app/components/current-question-presenter/current-question-presenter.component.html
@@ -1,7 +1,9 @@
 <ng-container *ngIf="question$ | async as question">
     <h1>{{question.caption}}</h1>
     <div class="all-answers">
-        <div class="answer" *ngFor="let answer of question.answers">
+        <div class="answer" *ngFor="let answer of question.answers; let i = index"
+            (click)="answerCurrentQuestion(i)"
+        >
             {{answer}}
         </div>    
     </div>
