component store demonstrated

--- a/Module 03/ngrx-exam/src/app/app.component.html
+++ b/Module 03/ngrx-exam/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <hr>
 
-<app-current-question-presenter></app-current-question-presenter>
+<router-outlet></router-outlet>
 
 <button (click)="reset()">Reset</button>
 <button (click)="goToAdmin()">Go To Admin</button>
